test/expected/explain_+i-c.out
explain int S::x
             ^
14: error: scoped names are not supported in C
